--- a/app/hosts/hosts.html
+++ b/app/hosts/hosts.html
@@ -1,9 +1,45 @@
 <div class="col-md-12">
+    <div modal="showModal" class="modal fade " id="newsModal" tabindex="-1" role="dialog" aria-labelledby="newsModalLabel">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="newsModalLabel">Dockery upgraded to {{$root.appVersion}}</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="col-md-offset-1">
+                        <strong>Changes:</strong><br/><br/>
+                        <strong>{{$root.appVersion}}</strong>
+                        <ul>
+                            <li>Add: added search for container diff</li>
+                            <li>Add: commit container as image</li>
+                            <li>Add: login into the docker hub and/or private repo(s)</li>
+                            <li>Add: push image to the repository</li>
+                            <li>Add: release notes to about/first run of new version</li>
+                            <li>Fix: removed $promise and $removed properties from the pure json view in containerDetails</li>
+                        </ul>
+                    </div>
+                    <div class="alert alert-danger" ng-show="!root.chrome">
+                        <strong>In the next release, the packaged Chrome app version will be replaced with hosted version from dockery.io site. The reason
+                            explained in the following
+                            blog entry: <a href="http://codeventor.blogspot.de/">http://codeventor.blogspot.de</a> and also added to the about page</strong>
+
+
+                    </div>
+
+                </div>
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-info" data-dismiss="modal" aria-label="Close" ng-click="markNewsRead()"><span
+                            aria-hidden="true">Mark as read</span></button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <form class="form-inline" role="form">
         <div class="form-group">
             <input type="text" class="form-control" id="newHostName" ng-model="newHostName" placeholder="name">
-
             <select ng-model="newHostPrefix" class="form-control">
                 <option value="http://">http://</option>
                 <!--<option value="https://">https://</option>-->
