Started working on repo login

--- a/app/repositories/repositories.html
+++ b/app/repositories/repositories.html
@@ -38,10 +38,10 @@
                         class="fa fa-cloud-download"></span><strong>
                     Pull selected</strong>
                 </button>
-                <!--<button type="button" class="btn btn-danger btn-sm" ng-click="downloadImage('lexandro/echo-repeat')"><span-->
-                <!--class="fa fa-cloud-download"></span><strong>-->
-                <!--Pull echo-repeat</strong>-->
-                <!--</button>-->
+                <button type="button" class="btn btn-warning btn-sm" ng-click="showRepositoryLogin()"><span
+                        class="fa fa-sign-in"></span><strong>
+                    Login</strong>
+                </button>
             </td>
         </tr>
 
