Working on repo login

--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
 <script src="assets/libs/bootstrap/dist/js/bootstrap.js"></script>
 <!---->
 <script src="assets/libs/angular/angular.js"></script>
+<script src="assets/libs/angular-ui/ui-bootstrap-tpls-0.13.4.min.js"></script>
 <script src="assets/libs/bootstrap-switch/dist/js/bootstrap-switch.js"></script>
 <script src="assets/libs/angular-bootstrap-switch/dist/angular-bootstrap-switch.js"></script>
 <script src="assets/libs/angular-messages/angular-messages.js"></script>
@@ -148,6 +149,7 @@
 <script src="app/images/images.js"></script>
 <script src="app/imageDetails/imageDetails.js"></script>
 <script src="app/repositories/repositories.js"></script>
+<script src="app/repositoryLogin/repositoryLogin.js"></script>
 <script src="app/tasks/tasks.js"></script>
 <script src="app/events/events.js"></script>
 <script src="app/about/about.js"></script>
