--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
 <script src="app/createContainer/createContainer.js"></script>
 <script src="app/images/images.js"></script>
 <script src="app/imageDetails/imageDetails.js"></script>
+<script src="app/pushImage/pushImage.js"></script>
 <script src="app/repositories/repositories.js"></script>
 <script src="app/repositoryLogin/repositoryLogin.js"></script>
 <script src="app/tasks/tasks.js"></script>
