--- a/app/imageDetails/imageDetails.html
+++ b/app/imageDetails/imageDetails.html
@@ -1,10 +1,19 @@
 <div class="col-md-12 pull-right">
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-6">
             <h3>Image: <strong>{{imageDetails.RepoTags[0]}}</strong>
             </h3>
         </div>
+        <!--<div class="col-md-6">-->
+            <!--<div class="pull-right " style="vertical-align: middle;margin-top: 21px">-->
+                <!--<button class="btn btn-success btn-sm"-->
+                        <!--ng-click="pushImage()">-->
+                    <!--<span class="fa fa-cloud-upload"></span><strong> push</strong>-->
+                <!--</button>-->
+            <!--</div>-->
+        <!--</div>-->
     </div>
+
     <hr/>
     <div class="alert alert-info" role="alert" ng-show="imageDataLoading">
         <h3 class="panel-title"><span class="glyphicon glyphicon-refresh spin"></span> {{imageDataLoadingMessage}}</h3>
