Replacing variable placeholder with static data for nicer loading

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="dockery" ng-csp="">
 <head>
     <meta charset="UTF-8">
-    <title>{{$root.appName}}</title>
+    <title>Dockery</title>
     <link rel="shortcut icon" href="assets/img/docker_icon.jpg">
     <link rel='stylesheet' href='assets/libs/bootstrap/dist/css/bootstrap.css'>
     <link rel='stylesheet' href='assets/libs/font-awesome/css/font-awesome.min.css'>
